--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="diseño web, desarrollo web, agencia web">
     <link rel="stylesheet" href="./css/styles-mobile.css">
+    <link rel="stylesheet" href="./css/styles-tablet.css">
+    <link rel="stylesheet" href="./css/styles-desktop.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@300;500&display=swap" rel="stylesheet">
     <title>Radiant Web</title>
