--- a/index.html
+++ b/index.html
@@ -13,8 +13,37 @@
     <title>Radiant Web</title>
 </head>
 <body>
+<!-- header Mobile -->
+<header class="header-mobile">
+    <div class="header-mobile__container">
+        <nav class="header-mobile__nav">
+            <a href="#" class="header-mobile__nav--logo">Radiant Web</a>
+            <ul class="header-mobile__nav--ul">
+                <li class="nav__ul--li"><a href="" class="ul__li--a">Inicio</a></li>
+                <li class="nav__ul--li"><a href="" class="ul__li--a">Nosotros</a></li>
+                <li class="nav__ul--li"><a href="" class="ul__li--a">Portafolio</a></li>
+                <li class="nav__ul--li"><a href="" class="ul__li--a">Servicios</a></li>
+                <li class="nav__ul--li"><a href="" class="ul__li--a">Contáctame</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
 
-    
+<!-- header Desktop -->
+<header class="header-desktop">
+    <div class="header-desktop__container">
+        <nav class="header-desktop__nav">
+            <a href="#" class="header-desktop__nav--logo">Radiant Web</a>
+            <ul class="header-desktop__nav--ul">
+                <li class="nav__ul--li"><a href="" class="ul__li--a">Inicio</a></li>
+                <li class="nav__ul--li"><a href="" class="ul__li--a">Nosotros</a></li>
+                <li class="nav__ul--li"><a href="" class="ul__li--a">Portafolio</a></li>
+                <li class="nav__ul--li"><a href="" class="ul__li--a">Servicios</a></li>
+                <li class="nav__ul--li"><a href="" class="ul__li--a">Contáctame</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
 
 </body>
 </html>
