estilizando el menu

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <div class="header-mobile__container">
         <nav class="header-mobile__nav">
             <a href="#" class="header-mobile__nav--logo">Radiant Web</a>
+            <img src="./images/icon-menu.svg" alt="" class="header-mobile__nav--icon-menu">
             <ul class="header-mobile__nav--ul">
                 <li class="nav__ul--li"><a href="" class="ul__li--a">Inicio</a></li>
                 <li class="nav__ul--li"><a href="" class="ul__li--a">Nosotros</a></li>
