--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./css/styles-desktop.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@300;500&display=swap" rel="stylesheet">
+    <script defer src="./js/main.js"></script>
     <title>Radiant Web</title>
 </head>
 <body>
@@ -19,7 +20,7 @@
         <nav class="header-mobile__nav">
             <a href="#" class="header-mobile__nav--logo">Radiant Web</a>
             <img src="./images/icon-menu.svg" alt="" class="header-mobile__nav--icon-menu">
-            <ul class="header-mobile__nav--ul">
+            <ul class="header-mobile__nav--ul header-mobile__nav--ul-visible">
                 <li class="nav__ul--li"><a href="" class="ul__li--a">Inicio</a></li>
                 <li class="nav__ul--li"><a href="" class="ul__li--a">Nosotros</a></li>
                 <li class="nav__ul--li"><a href="" class="ul__li--a">Portafolio</a></li>
