--- a/index.html
+++ b/index.html
@@ -8,10 +8,18 @@
     <link rel="stylesheet" href="./css/styles-mobile.css">
     <link rel="stylesheet" href="./css/styles-desktop.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@300;500&display=swap" rel="stylesheet">
+    <script defer src="./js/main.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <title>Radiant Web</title>
 </head>
 <body>
-
+    <!-- Menu small screen -->
+    <header class="header-mobile">
+        <div class="header-mobile__container">
+            <nav class="header-mobile__nav">
+                <a href="#" class="header-mobile__nav--logo">Radiant Web</a>
+            </nav>
+        </div>
+    </header>
 </body>
 </html>
