--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
         <div class="header-desktop__container">
             <nav class="header-desktop__nav">
                 <a href="#" class="header-desktop__nav--logo">Radiant Web</a>
-                <img src="./images/icon-menu.svg" alt="icon-menu" class="header-desktop__nav--toggle">
-                <ul class="header-desktop__nav-menu header-desktop__nav-menu-visible">
+                <ul class="header-desktop__nav-menu">
                     <li class="header-desktop__nav-menu--link"><a href="#">Inicio</a></li>
                     <li class="header-desktop__nav-menu--link"><a href="#">Nosotros</a></li>
                     <li class="header-desktop__nav-menu--link"><a href="#">Portafolio</a></li>
