section introduce mobile finished

--- a/index.html
+++ b/index.html
@@ -46,5 +46,26 @@
             </nav>
         </div>
     </header>
+
+    <!-- Main -->
+    <main class="main">
+        <div class="main__container">
+            <section class="main__introduce">
+                <div class="main__introduce--title">
+                    <h4 class="main__introduce--title-h4">¡Hola!, somos</h4>
+                    <h2 class="main__introduce--title-h2">Radiant Web</h2>
+                    <h3 class="main_introduce--title-h3">Desarrolladores Web</h3>
+                </div>
+                <button class="main__introduce--button-wsp">
+                    <img src="./images/icon-wsp.svg" alt="icon-whatsapp" class="main__introduce--button-wsp-icon">
+                    <p class="main__introduce--button-wsp-text">¡Hablemos!</p>
+                </button>
+            </section>
+            <section class="main__about"></section>
+            <section class="main__portfolio"></section>
+            <section class="main__services"></section>
+            <section class="main__contact"></section>
+        </div>
+    </main>
 </body>
 </html>
