section about version 1

--- a/index.html
+++ b/index.html
@@ -51,17 +51,33 @@
     <main class="main">
         <div class="main__container">
             <section class="main__introduce">
-                <div class="main__introduce--title">
-                    <h4 class="main__introduce--title-h4">¡Hola!, somos</h4>
-                    <h2 class="main__introduce--title-h2">Radiant Web</h2>
-                    <h3 class="main_introduce--title-h3">Desarrolladores Web</h3>
+                <div class="main__introduce-container">
+                    <div class="main__introduce--title">
+                        <h4 class="main__introduce--title-h4">¡Hola!, somos</h4>
+                        <h2 class="main__introduce--title-h2">Radiant Web</h2>
+                        <h3 class="main_introduce--title-h3">Desarrolladores Web</h3>
+                        <button class="main__introduce--button-wsp">
+                            <img src="./images/icon-wsp.svg" alt="icon-whatsapp" class="main__introduce--button-wsp-icon">
+                            <p class="main__introduce--button-wsp-text">¡Hablemos!</p>
+                        </button>
+                    </div>
+
                 </div>
-                <button class="main__introduce--button-wsp">
-                    <img src="./images/icon-wsp.svg" alt="icon-whatsapp" class="main__introduce--button-wsp-icon">
-                    <p class="main__introduce--button-wsp-text">¡Hablemos!</p>
-                </button>
+                <div class="main__introduce--slider">
+                    <img src="./images/main-image-01.png" alt="slider-1" class="main__introduce--slider-img1">
+                </div>
             </section>
-            <section class="main__about"></section>
+            <section class="main__about">
+                <div class="main__about-content">
+                    <h2 class="main__about--title">Sobre nosotros</h2>
+                    <p class="main__about--text">Somos un grupo de desarrolladores web enfocados en tecnología WordPress. Durante los últimos 4 años, hemos prestado servicios para apoyar el crecimiento de ideas y negocios digitales a través de la construcción de paginas y sitios web.
+    
+                    Nuestra labor como freelances independientes, nos brindó la experiencia necesaria para construir más de 50 sitios web modernos, atractivos y funcionales.</p>
+                </div>
+                <div class="main__about-icons">
+                    
+                </div>
+            </section>
             <section class="main__portfolio"></section>
             <section class="main__services"></section>
             <section class="main__contact"></section>
