section about in screen mobile finished

--- a/index.html
+++ b/index.html
@@ -71,11 +71,34 @@
                 <div class="main__about-content">
                     <h2 class="main__about--title">Sobre nosotros</h2>
                     <p class="main__about--text">Somos un grupo de desarrolladores web enfocados en tecnología WordPress. Durante los últimos 4 años, hemos prestado servicios para apoyar el crecimiento de ideas y negocios digitales a través de la construcción de paginas y sitios web.
-    
+                    <br><br>
                     Nuestra labor como freelances independientes, nos brindó la experiencia necesaria para construir más de 50 sitios web modernos, atractivos y funcionales.</p>
                 </div>
                 <div class="main__about-icons">
-                    
+                    <figure class="main__about-icons-figure">
+                        <img src="./images/icon-html.svg" alt="icon-html" class="main__about-icons--img">
+                        <h4 class="main__about-icons--title">HTML5</h4>
+                    </figure>
+                    <figure class="main__about-icons-figure">
+                        <img src="./images/icon-css.svg" alt="icon-css" class="main__about-icons--img">
+                        <h4 class="main__about-icons--title">CSS3</h4>
+                    </figure>
+                    <figure class="main__about-icons-figure">
+                        <img src="./images/icon-js.svg" alt="icon-javascript" class="main__about-icons--img">
+                        <h4 class="main__about-icons--title">JavaScript</h4>
+                    </figure>
+                    <figure class="main__about-icons-figure">
+                        <img src="./images/icon-php.svg" alt="icon-php" class="main__about-icons--img">
+                        <h4 class="main__about-icons--title">PHP</h4>
+                    </figure>
+                    <figure class="main__about-icons-figure">
+                        <img src="./images/icon-wordpress.svg" alt="icon-wordpress" class="main__about-icons--img">
+                        <h4 class="main__about-icons--title">WordPress</h4>
+                    </figure>
+                    <figure class="main__about-icons-figure">
+                        <img src="./images/icon-elementor.svg" alt="icon-elementor" class="main__about-icons--img">
+                        <h4 class="main__about-icons--title">Elementor</h4>
+                    </figure>
                 </div>
             </section>
             <section class="main__portfolio"></section>
