section portfolio mobile finished

--- a/index.html
+++ b/index.html
@@ -101,7 +101,33 @@
                     </figure>
                 </div>
             </section>
-            <section class="main__portfolio"></section>
+            <section class="main__portfolio">
+                <div class="main__portfolio-content">
+                    <h2 class="main__portfolio--title">Portafolio</h2>
+                    <p class="main__portfolio--text">Increíbles diseños adaptados a múltiples dispositivos que harán de tu website un lugar seguro, confiable y funcional para tu empresa. Conoce los trabajos más recientes.
+                    </p>
+                </div>
+                <div class="main__portfolio-categories">
+                    <a href="#" class="main__portfolio-categories--link">Todo</a>
+                    <a href="#" class="main__portfolio-categories--link">Ecommerce</a>
+                    <a href="#" class="main__portfolio-categories--link">Corporativa</a>
+                    <a href="#" class="main__portfolio-categories--link">Portafolio</a>
+                    <a href="#" class="main__portfolio-categories--link">Empresa</a>
+                </div>
+                <div class="main__portfolio-galery">
+                    <div class="main__portfolio-galery--item main__portfolio-galery--item-1"><p class="main__portfolio-galery--title">Coaching</p></div>
+                    <div class="main__portfolio-galery--item main__portfolio-galery--item-2"><p class="main__portfolio-galery--title">Corporativa</p></div>
+                    <div class="main__portfolio-galery--item main__portfolio-galery--item-3"><p class="main__portfolio-galery--title">Tienda Online Perfumes</p></div>
+                    <div class="main__portfolio-galery--item main__portfolio-galery--item-4">
+                        <p class="main__portfolio-galery--title">Portafolio Fotografía</p>
+                    </div>
+                    <div class="main__portfolio-galery--item main__portfolio-galery--item-5">
+                        <p class="main__portfolio-galery--title">Portafolio Diseñador Web</p>
+                    </div>
+                    <div class="main__portfolio-galery--item main__portfolio-galery--item-6"><p class="main__portfolio-galery--title">Ecommerce Retail</p></div>
+                    <div class="main__portfolio-galery--item main__portfolio-galery--item-7"><p class="main__portfolio-galery--title">Empresa Turismo</p></div>
+                </div>
+            </section>
             <section class="main__services"></section>
             <section class="main__contact"></section>
         </div>
