section services mobile finished

--- a/index.html
+++ b/index.html
@@ -128,7 +128,44 @@
                     <div class="main__portfolio-galery--item main__portfolio-galery--item-7"><p class="main__portfolio-galery--title">Empresa Turismo</p></div>
                 </div>
             </section>
-            <section class="main__services"></section>
+            <section class="main__services">
+                <div class="main__services-content">
+                    <h2 class="main__services--title">Servicios</h2>
+                    <p class="main__services--text">Un portafolio de servicios enfocado en brindarte soluciones de altos estándares web.</p>
+                </div>
+                <div class="main__services-card">
+                    <article class="main__services-card--item">
+                        <img src="./images/icon-business.svg" alt="icon-corporative" class="main__services-card--item-icon">
+                        <h3 class="main__services-card--item-title">Corporativa</h3>
+                        <p class="main__services-card--item-text">Tu empresa necesita posicionarse en el mercado digital. Un espacio online es la mejor manera de lograrlo.</p>
+                    </article>
+                    <article class="main__services-card--item">
+                        <img src="./images/icon-cart.svg" alt="icon-ecommerce" class="main__services-card--item-icon">
+                        <h3 class="main__services-card--item-title">E-Commerce</h3>
+                        <p class="main__services-card--item-text">Vende tus productos sin fronteras. Una tienda online te permitirá ganar más clientes y escalar tu negocio.</p>
+                    </article>
+                    <article class="main__services-card--item">
+                        <img src="./images/icon-blog.svg" alt="icon-blog" class="main__services-card--item-icon">
+                        <h3 class="main__services-card--item-title">Blog</h3>
+                        <p class="main__services-card--item-text">Para emprendedores que cuentan con una comunidad de seguidores. Monetiza tu contenido.</p>
+                    </article>
+                    <article class="main__services-card--item">
+                        <img src="./images/icon-portfolio.svg" alt="icon-portfolio" class="main__services-card--item-icon">
+                        <h3 class="main__services-card--item-title">Portafolio</h3>
+                        <p class="main__services-card--item-text">Si eres un profesional que desea ofrecer servicios, un portafolio web es la carta de presentación que necesitas.</p>
+                    </article>
+                    <article class="main__services-card--item">
+                        <img src="./images/icon-startup.svg" alt="icon-startup" class="main__services-card--item-icon">
+                        <h3 class="main__services-card--item-title">StartUp</h3>
+                        <p class="main__services-card--item-text">El futuro son los negocios 3.0. Potencia tu modelo de negocio y logra visibilidad de tu marca.</p>
+                    </article>
+                    <article class="main__services-card--item">
+                        <img src="./images/icon-admonweb.svg" alt="icon-admon-web" class="main__services-card--item-icon">
+                        <h3 class="main__services-card--item-title">Admon Web</h3>
+                        <p class="main__services-card--item-text">Administramos tu sitio web para que dediques tiempo a los aspectos más importantes de tu negocio.</p>
+                    </article>
+                </div>
+            </section>
             <section class="main__contact"></section>
         </div>
     </main>
