section contact mobile finished

--- a/index.html
+++ b/index.html
@@ -166,7 +166,21 @@
                     </article>
                 </div>
             </section>
-            <section class="main__contact"></section>
+            <section class="main__contact">
+                <div class="main__contact-container">
+                    <h2 class="main__contact--title">¿Hablamos?</h2>
+                    <p class="main__contact--text">Comunícate con nosotros, te asesoramos para que obtengas la mejor alternativa para el crecimiento de tu emprendimiento, negocio y/o empresa.</p>
+                    <form action="" class="main__contact-form">
+                        <input type="text" class="main__contact-form--name main__contact-form--item" placeholder="Nombre completo">
+                        <input type="email" class="main__contact-form--email main__contact-form--item" placeholder="Correo electrónico">
+                        <input type="text" class="main__contact-form--msg main__contact-form--item" placeholder="Déjanos un mensaje">
+                        <input type="submit" class="main__contact-form--btn" value="Enviar">
+                    </form>
+                </div>
+                <div class="main__contact-img">
+                    <img src="./images/image-contact.png" alt="image contact" class="main__contact-img--img">
+                </div>
+            </section>
         </div>
     </main>
 </body>
