section introduce tablet finished

--- a/index.html
+++ b/index.html
@@ -61,10 +61,9 @@
                             <p class="main__introduce--button-wsp-text">¡Hablemos!</p>
                         </button>
                     </div>
-
                 </div>
-                <div class="main__introduce--slider">
-                    <img src="./images/main-image-01.png" alt="slider-1" class="main__introduce--slider-img1">
+                <div class="main__introduce-slider">
+                    <img src="./images/main-image-01.png" alt="slider-1" class="main__introduce-slider--img1">
                 </div>
             </section>
             <section class="main__about">
