section contact desktop finished

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                     <form action="" class="main__contact-form">
                         <input type="text" class="main__contact-form--name main__contact-form--item" placeholder="Nombre completo">
                         <input type="email" class="main__contact-form--email main__contact-form--item" placeholder="Correo electrónico">
-                        <input type="text" class="main__contact-form--msg main__contact-form--item" placeholder="Déjanos un mensaje">
+                        <textarea type="text" class="main__contact-form--msg main__contact-form--item" placeholder="Déjanos un mensaje" rows="5" cols="5" ></textarea>
                         <input type="submit" class="main__contact-form--btn" value="Enviar">
                     </form>
                 </div>
@@ -182,5 +182,8 @@
             </section>
         </div>
     </main>
+
+    <!-- Footer -->
+    
 </body>
 </html>
